fix Sonar warnings